--- a/style.css
+++ b/style.css
@@ -1,1 +1,6 @@
 a{text-decoration:none;}
+a{text-decoration:none;}
+a{text-decoration:none;}
+a{text-decoration:none;}
+a{text-decoration:none;}
+a{text-decoration:none;}
