--- a/style.css
+++ b/style.css
@@ -4,3 +4,9 @@ a{text-decoration:none;}
 a{text-decoration:none;}
 a{text-decoration:none;}
 a{text-decoration:none;}
+h1{font-size:1rem;}
+h1{font-size:1rem;}
+h1{font-size:1rem;}
+h1{font-size:1rem;}
+h1{font-size:1rem;}
+h1{font-size:1rem;}
