--- a/style.css
+++ b/style.css
@@ -10,3 +10,11 @@ h1{font-size:1rem;}
 h1{font-size:1rem;}
 h1{font-size:1rem;}
 h1{font-size:1rem;}
+p{color:fuchsia;}
+p{color:fuchsia;}
+p{color:fuchsia;}
+p{color:fuchsia;}
+p{color:fuchsia;}
+p{color:fuchsia;}
+p{color:fuchsia;}
+p{color:fuchsia;}
